fix scrollbar

--- a/_sass/_song.scss
+++ b/_sass/_song.scss
@@ -70,18 +70,5 @@ blockquote.song at {
     padding-bottom: 1.5em;
 }
 
-/* 滚动条 */
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #F5F5F5;
-}
 
-::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
-    background-color: #F5F5F5;
-}
 
-::-webkit-scrollbar-thumb {
-    background-color: #404040;
-}
